# libxephyr

./: .gitmodules  CMakeLists.txt  cleanup_headers.py  meson.build  trace_includes.py  used_headers.txt
Xext/: CMakeLists.txt  bigreq.c  dpms.c  dpmsproc.h  geext.c  geext.h  geint.h  hashtable.c  meson.build  panoramiX.c  panoramiX.h  panoramiXSwap.c  panoramiXh.h  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  shape.c  shm.c  shmint.h  sleepuntil.c  sync.c  syncsdk.h  syncsrv.h  vidmode.c  xace.c  xace.h  xcmisc.c  xf86bigfont.c  xres.c  xselinux_ext.c  xselinux_hooks.c  xselinux_label.c  xtest.c  xvdisp.c  xvdisp.h  xvdix.h  xvmain.c  xvmc.c  xvmcext.h
Xi/: CMakeLists.txt  allowev.c  chgdctl.c  chgfctl.c  chgkbd.c  chgkmap.c  chgprop.c  chgptr.c  closedev.c  devbell.c  exevents.c  exglobals.h  extinit.c  getbmap.c  getdctl.c  getfctl.c  getfocus.c  getkmap.c  getmmap.c  getprop.c  getprop.h  getselev.c  getvers.c  grabdev.c  grabdev.h  grabdevb.c  grabdevk.c  gtmotion.c  listdev.c  opendev.c  queryst.c  selectev.c  sendexev.c  setbmap.c  setdval.c  setfocus.c  setmmap.c  setmode.c  stubs.c  ungrdev.c  (+19 more)
composite/: CMakeLists.txt  compalloc.c  compext.c  compinit.c  compint.h  compoverlay.c  compwindow.c  meson.build
config/: CMakeLists.txt  config-backends.h  config.c  dbus-core.c  hal.c  meson.build  udev.c  wscons.c
damageext/: CMakeLists.txt  damageext.c  damageextint.h
dix/: CMakeLists.txt  atom.c  colormap.c  context.c  context.h  cursor.c  devices.c  dispatch.c  dixfonts.c  dixutils.c  enterleave.c  eventconvert.c  events.c  extension.c  gc.c  gestures.c  getevents.c  globals.c  glyphcurs.c  grabs.c  initatoms.c  inpututils.c  main.c  meson.build  pixmap.c  privates.c  property.c  ptrveloc.c  region.c  registry.c  resource.c  selection.c  stubmain.c  swaprep.c  swapreq.c  tables.c  touch.c  window.c
exa/: CMakeLists.txt  exa.c  exa_accel.c  exa_classic.c  exa_driver.c  exa_glyphs.c  exa_migration_classic.c  exa_migration_mixed.c  exa_mixed.c  exa_offscreen.c  exa_priv.h  exa_render.c  exa_unaccel.c  meson.build
fb/: CMakeLists.txt  fb.h  fballpriv.c  fbarc.c  fbbits.c  fbbits.h  fbblt.c  fbbltone.c  fbcmap_mi.c  fbcopy.c  fbfill.c  fbfillrect.c  fbfillsp.c  fbgc.c  fbgetsp.c  fbglyph.c  fbimage.c  fbline.c  fboverlay.c  fbpict.c  fbpixmap.c  fbpoint.c  fbpush.c  fbscreen.c  fbseg.c  fbsetsp.c  fbsolid.c  fbtrap.c  fbutil.c  fbwindow.c  meson.build  wfbrename.h
glamor/: CMakeLists.txt  glamor.c  glamor_addtraps.c  glamor_composite_glyphs.c  glamor_compositerects.c  glamor_context.h  glamor_copy.c  glamor_core.c  glamor_dash.c  glamor_debug.h  glamor_egl.h  glamor_egl_stubs.c  glamor_fbo.c  glamor_font.c  glamor_glx.c  glamor_glyphblt.c  glamor_gradient.c  glamor_image.c  glamor_largepixmap.c  glamor_lines.c  glamor_picture.c  glamor_pixmap.c  glamor_points.c  glamor_prepare.c  glamor_priv.h  glamor_program.c  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_spans.c  glamor_sync.c  glamor_text.c  glamor_transfer.c  glamor_transform.c  glamor_trapezoid.c  glamor_triangles.c  glamor_utils.c  glamor_utils.h  glamor_vbo.c  glamor_window.c  (+2 more)
glx/: CMakeLists.txt  clientinfo.c  createcontext.c  extension_string.c  extension_string.h  glxcmds.c  glxcmdsswap.c  glxdri2.c  glxdricommon.c  glxdricommon.h  glxdriswrast.c  glxext.c  glxext.h  glxscreens.c  glxserver.h  indirect_dispatch.c  indirect_dispatch_swap.c  indirect_program.c  indirect_reqsize.c  indirect_size_get.c  indirect_table.c  indirect_texture_compression.c  indirect_util.c  render2.c  render2swap.c  renderpix.c  renderpixswap.c  rensize.c  single2.c  single2swap.c  singlepix.c  singlepixswap.c  singlesize.c  swap_interval.c  vnd_dispatch_stubs.c  vndcmds.c  vndext.c  vndserver.h  vndservermapping.c  vndservervendor.c  (+2 more)
include/: CMakeLists.txt  Xprintf.h  busfault.h  colormap.h  cursor.h  dbus-core.h  dix-config.h.in  dix.h  dixevents.h  dixfont.h  dixgrabs.h  dixstruct.h  eventconvert.h  exevents.h  extension.h  extinit.h  extnsionst.h  gc.h  globals.h  glx_extinit.h  glxvndabi.h  hotplug.h  input.h  inputstr.h  inpututils.h  meson.build  misc.h  opaque.h  os.h  pixmapstr.h  privates.h  property.h  ptrveloc.h  regionstr.h  registry.h  resource.h  rgb.h  screenint.h  scrnintstr.h  selection.h  (+9 more)
mi/: CMakeLists.txt  meson.build  mi.h  miarc.c  mibitblt.c  micmap.c  micmap.h  micopy.c  midash.c  midispcur.c  mieq.c  miexpose.c  mifillarc.c  mifillrct.c  migc.c  miglblt.c  miinitext.c  miinitext.h  miline.h  mioverlay.c  mipointer.c  mipointer.h  mipoly.c  mipolypnt.c  mipolyrect.c  mipolyseg.c  mipolytext.c  mipushpxl.c  miscrinit.c  misprite.c  mivaltree.c  miwideline.c  miwindow.c  mizerarc.c  mizerclip.c  mizerline.c
os/: CMakeLists.txt  WaitFor.c  access.c  auth.c  backtrace.c  busfault.c  client.c  connection.c  inputthread.c  io.c  log.c  meson.build  mitauth.c  oscolor.c  osdep.h  osinit.c  ospoll.c  reallocarray.c  rpcauth.c  strcasecmp.c  strcasestr.c  strlcat.c  strlcpy.c  strndup.c  timingsafe_memcmp.c  utils.c  xdmauth.c  xdmcp.c  xprintf.c  xserver_poll.c  xsha1.c  xstrans.c
present/: CMakeLists.txt  meson.build  present.c  present.h  present_event.c  present_execute.c  present_fake.c  present_fence.c  present_notify.c  present_priv.h  present_request.c  present_scmd.c  present_screen.c  present_vblank.c  presentext.h
randr/: CMakeLists.txt  meson.build  randr.c  randrstr.h  rrcrtc.c  rrdispatch.c  rrinfo.c  rrlease.c  rrmode.c  rrmonitor.c  rroutput.c  rrpointer.c  rrproperty.c  rrprovider.c  rrproviderproperty.c  rrscreen.c  rrsdispatch.c  rrtransform.c  rrxinerama.c
record/: CMakeLists.txt  record.c  set.c
render/: CMakeLists.txt  animcur.c  filter.c  glyph.c  glyphstr.h  matrix.c  meson.build  miindex.c  mipict.c  mirect.c  mitrap.c  mitri.c  picture.c  picture.h  picturestr.h  render.c
xfixes/: CMakeLists.txt  cursor.c  disconnect.c  region.c  saveset.c  select.c  xfixes.c  xfixes.h  xfixesint.h
xkb/: CMakeLists.txt  XKBAlloc.c  XKBGAlloc.c  XKBMAlloc.c  XKBMisc.c  ddxBeep.c  ddxCtrls.c  ddxKillSrv.c  ddxLEDs.c  ddxLoad.c  ddxPrivate.c  ddxVT.c  maprules.c  xkb.c  (+12 more)
(+79 files in other folders)
